# newProject

./: Amitest.c  Amitest.h  BinFile.c  BinFile.h  CMakeLists.txt  ErrorsHandlings.c  ErrorsHandlings.h  FreeMemory.c  FreeMemory.h  List_Tests.c  List_Tests.h  MovesArray.c  MovesArray.h  MovesList.c  MovesList.h  PathCalculation.c  PathCalculation.h  PathFromFile.c  PathFromFile.h  README.txt  Trash.c  Types.h  main.c  tree.c  tree.h
